pysqlparser/parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> table_definitions
Rule 1     table_definitions -> table_definition
Rule 2     table_definitions -> table_definition table_definitions
Rule 3     table_definition -> CREATE TABLE table_name LPAREN column_definitions RPAREN SEMICOLON
Rule 4     table_definition -> CREATE TABLE IF NOT EXISTS table_name LPAREN column_definitions RPAREN SEMICOLON
Rule 5     table_name -> IDENTIFIER
Rule 6     table_name -> schema DOT IDENTIFIER
Rule 7     schema -> IDENTIFIER
Rule 8     column_definitions -> column_definition
Rule 9     column_definitions -> primary_key_definition
Rule 10    column_definitions -> foreign_key_definition
Rule 11    column_definitions -> column_definition COMMA column_definitions
Rule 12    column_definition -> IDENTIFIER data_type
Rule 13    column_definition -> IDENTIFIER data_type reference_definition
Rule 14    column_definition -> IDENTIFIER data_type PRIMARY KEY
Rule 15    primary_key_definition -> PRIMARY KEY LPAREN IDENTIFIER RPAREN
Rule 16    reference_definition -> REFERENCES table_name LPAREN column_name_list RPAREN
Rule 17    reference_definition -> REFERENCES table_name
Rule 18    foreign_key_definition -> FOREIGN KEY LPAREN IDENTIFIER RPAREN reference_definition
Rule 19    column_name_list -> IDENTIFIER
Rule 20    column_name_list -> IDENTIFIER COMMA column_name_list
Rule 21    data_type -> type
Rule 22    data_type -> type LPAREN NUMBER RPAREN
Rule 23    type -> IDENTIFIER

Terminals, with rules where they appear

COMMA                : 11 20
CREATE               : 3 4
DOT                  : 6
EXISTS               : 4
FOREIGN              : 18
IDENTIFIER           : 5 6 7 12 13 14 15 18 19 20 23
IF                   : 4
KEY                  : 14 15 18
LPAREN               : 3 4 15 16 18 22
NOT                  : 4
NUMBER               : 22
PRIMARY              : 14 15
REFERENCES           : 16 17
RPAREN               : 3 4 15 16 18 22
SEMICOLON            : 3 4
TABLE                : 3 4
error                : 

Nonterminals, with rules where they appear

column_definition    : 8 11
column_definitions   : 3 4 11
column_name_list     : 16 20
data_type            : 12 13 14
foreign_key_definition : 10
primary_key_definition : 9
reference_definition : 13 18
schema               : 6
table_definition     : 1 2
table_definitions    : 2 0
table_name           : 3 4 16 17
type                 : 21 22

Parsing method: LALR

state 0

    (0) S' -> . table_definitions
    (1) table_definitions -> . table_definition
    (2) table_definitions -> . table_definition table_definitions
    (3) table_definition -> . CREATE TABLE table_name LPAREN column_definitions RPAREN SEMICOLON
    (4) table_definition -> . CREATE TABLE IF NOT EXISTS table_name LPAREN column_definitions RPAREN SEMICOLON

    CREATE          shift and go to state 2

    table_definition               shift and go to state 1
    table_definitions              shift and go to state 3

state 1

    (1) table_definitions -> table_definition .
    (2) table_definitions -> table_definition . table_definitions
    (1) table_definitions -> . table_definition
    (2) table_definitions -> . table_definition table_definitions
    (3) table_definition -> . CREATE TABLE table_name LPAREN column_definitions RPAREN SEMICOLON
    (4) table_definition -> . CREATE TABLE IF NOT EXISTS table_name LPAREN column_definitions RPAREN SEMICOLON

    $end            reduce using rule 1 (table_definitions -> table_definition .)
    CREATE          shift and go to state 2

    table_definition               shift and go to state 1
    table_definitions              shift and go to state 4

state 2

    (3) table_definition -> CREATE . TABLE table_name LPAREN column_definitions RPAREN SEMICOLON
    (4) table_definition -> CREATE . TABLE IF NOT EXISTS table_name LPAREN column_definitions RPAREN SEMICOLON

    TABLE           shift and go to state 5


state 3

    (0) S' -> table_definitions .



state 4

    (2) table_definitions -> table_definition table_definitions .

    $end            reduce using rule 2 (table_definitions -> table_definition table_definitions .)


state 5

    (3) table_definition -> CREATE TABLE . table_name LPAREN column_definitions RPAREN SEMICOLON
    (4) table_definition -> CREATE TABLE . IF NOT EXISTS table_name LPAREN column_definitions RPAREN SEMICOLON
    (5) table_name -> . IDENTIFIER
    (6) table_name -> . schema DOT IDENTIFIER
    (7) schema -> . IDENTIFIER

    IF              shift and go to state 8
    IDENTIFIER      shift and go to state 9

    table_name                     shift and go to state 7
    schema                         shift and go to state 6

state 6

    (6) table_name -> schema . DOT IDENTIFIER

    DOT             shift and go to state 10


state 7

    (3) table_definition -> CREATE TABLE table_name . LPAREN column_definitions RPAREN SEMICOLON

    LPAREN          shift and go to state 11


state 8

    (4) table_definition -> CREATE TABLE IF . NOT EXISTS table_name LPAREN column_definitions RPAREN SEMICOLON

    NOT             shift and go to state 12


state 9

    (5) table_name -> IDENTIFIER .
    (7) schema -> IDENTIFIER .

    LPAREN          reduce using rule 5 (table_name -> IDENTIFIER .)
    COMMA           reduce using rule 5 (table_name -> IDENTIFIER .)
    RPAREN          reduce using rule 5 (table_name -> IDENTIFIER .)
    DOT             reduce using rule 7 (schema -> IDENTIFIER .)


state 10

    (6) table_name -> schema DOT . IDENTIFIER

    IDENTIFIER      shift and go to state 13


state 11

    (3) table_definition -> CREATE TABLE table_name LPAREN . column_definitions RPAREN SEMICOLON
    (8) column_definitions -> . column_definition
    (9) column_definitions -> . primary_key_definition
    (10) column_definitions -> . foreign_key_definition
    (11) column_definitions -> . column_definition COMMA column_definitions
    (12) column_definition -> . IDENTIFIER data_type
    (13) column_definition -> . IDENTIFIER data_type reference_definition
    (14) column_definition -> . IDENTIFIER data_type PRIMARY KEY
    (15) primary_key_definition -> . PRIMARY KEY LPAREN IDENTIFIER RPAREN
    (18) foreign_key_definition -> . FOREIGN KEY LPAREN IDENTIFIER RPAREN reference_definition

    IDENTIFIER      shift and go to state 19
    PRIMARY         shift and go to state 14
    FOREIGN         shift and go to state 16

    column_definition              shift and go to state 15
    foreign_key_definition         shift and go to state 18
    primary_key_definition         shift and go to state 20
    column_definitions             shift and go to state 17

state 12

    (4) table_definition -> CREATE TABLE IF NOT . EXISTS table_name LPAREN column_definitions RPAREN SEMICOLON

    EXISTS          shift and go to state 21


state 13

    (6) table_name -> schema DOT IDENTIFIER .

    LPAREN          reduce using rule 6 (table_name -> schema DOT IDENTIFIER .)
    COMMA           reduce using rule 6 (table_name -> schema DOT IDENTIFIER .)
    RPAREN          reduce using rule 6 (table_name -> schema DOT IDENTIFIER .)


state 14

    (15) primary_key_definition -> PRIMARY . KEY LPAREN IDENTIFIER RPAREN

    KEY             shift and go to state 22


state 15

    (8) column_definitions -> column_definition .
    (11) column_definitions -> column_definition . COMMA column_definitions

    RPAREN          reduce using rule 8 (column_definitions -> column_definition .)
    COMMA           shift and go to state 23


state 16

    (18) foreign_key_definition -> FOREIGN . KEY LPAREN IDENTIFIER RPAREN reference_definition

    KEY             shift and go to state 24


state 17

    (3) table_definition -> CREATE TABLE table_name LPAREN column_definitions . RPAREN SEMICOLON

    RPAREN          shift and go to state 25


state 18

    (10) column_definitions -> foreign_key_definition .

    RPAREN          reduce using rule 10 (column_definitions -> foreign_key_definition .)


state 19

    (12) column_definition -> IDENTIFIER . data_type
    (13) column_definition -> IDENTIFIER . data_type reference_definition
    (14) column_definition -> IDENTIFIER . data_type PRIMARY KEY
    (21) data_type -> . type
    (22) data_type -> . type LPAREN NUMBER RPAREN
    (23) type -> . IDENTIFIER

    IDENTIFIER      shift and go to state 28

    type                           shift and go to state 26
    data_type                      shift and go to state 27

state 20

    (9) column_definitions -> primary_key_definition .

    RPAREN          reduce using rule 9 (column_definitions -> primary_key_definition .)


state 21

    (4) table_definition -> CREATE TABLE IF NOT EXISTS . table_name LPAREN column_definitions RPAREN SEMICOLON
    (5) table_name -> . IDENTIFIER
    (6) table_name -> . schema DOT IDENTIFIER
    (7) schema -> . IDENTIFIER

    IDENTIFIER      shift and go to state 9

    table_name                     shift and go to state 29
    schema                         shift and go to state 6

state 22

    (15) primary_key_definition -> PRIMARY KEY . LPAREN IDENTIFIER RPAREN

    LPAREN          shift and go to state 30


state 23

    (11) column_definitions -> column_definition COMMA . column_definitions
    (8) column_definitions -> . column_definition
    (9) column_definitions -> . primary_key_definition
    (10) column_definitions -> . foreign_key_definition
    (11) column_definitions -> . column_definition COMMA column_definitions
    (12) column_definition -> . IDENTIFIER data_type
    (13) column_definition -> . IDENTIFIER data_type reference_definition
    (14) column_definition -> . IDENTIFIER data_type PRIMARY KEY
    (15) primary_key_definition -> . PRIMARY KEY LPAREN IDENTIFIER RPAREN
    (18) foreign_key_definition -> . FOREIGN KEY LPAREN IDENTIFIER RPAREN reference_definition

    IDENTIFIER      shift and go to state 19
    PRIMARY         shift and go to state 14
    FOREIGN         shift and go to state 16

    column_definition              shift and go to state 15
    foreign_key_definition         shift and go to state 18
    primary_key_definition         shift and go to state 20
    column_definitions             shift and go to state 31

state 24

    (18) foreign_key_definition -> FOREIGN KEY . LPAREN IDENTIFIER RPAREN reference_definition

    LPAREN          shift and go to state 32


state 25

    (3) table_definition -> CREATE TABLE table_name LPAREN column_definitions RPAREN . SEMICOLON

    SEMICOLON       shift and go to state 33


state 26

    (21) data_type -> type .
    (22) data_type -> type . LPAREN NUMBER RPAREN

    PRIMARY         reduce using rule 21 (data_type -> type .)
    REFERENCES      reduce using rule 21 (data_type -> type .)
    COMMA           reduce using rule 21 (data_type -> type .)
    RPAREN          reduce using rule 21 (data_type -> type .)
    LPAREN          shift and go to state 34


state 27

    (12) column_definition -> IDENTIFIER data_type .
    (13) column_definition -> IDENTIFIER data_type . reference_definition
    (14) column_definition -> IDENTIFIER data_type . PRIMARY KEY
    (16) reference_definition -> . REFERENCES table_name LPAREN column_name_list RPAREN
    (17) reference_definition -> . REFERENCES table_name

    COMMA           reduce using rule 12 (column_definition -> IDENTIFIER data_type .)
    RPAREN          reduce using rule 12 (column_definition -> IDENTIFIER data_type .)
    PRIMARY         shift and go to state 35
    REFERENCES      shift and go to state 36

    reference_definition           shift and go to state 37

state 28

    (23) type -> IDENTIFIER .

    LPAREN          reduce using rule 23 (type -> IDENTIFIER .)
    PRIMARY         reduce using rule 23 (type -> IDENTIFIER .)
    REFERENCES      reduce using rule 23 (type -> IDENTIFIER .)
    COMMA           reduce using rule 23 (type -> IDENTIFIER .)
    RPAREN          reduce using rule 23 (type -> IDENTIFIER .)


state 29

    (4) table_definition -> CREATE TABLE IF NOT EXISTS table_name . LPAREN column_definitions RPAREN SEMICOLON

    LPAREN          shift and go to state 38


state 30

    (15) primary_key_definition -> PRIMARY KEY LPAREN . IDENTIFIER RPAREN

    IDENTIFIER      shift and go to state 39


state 31

    (11) column_definitions -> column_definition COMMA column_definitions .

    RPAREN          reduce using rule 11 (column_definitions -> column_definition COMMA column_definitions .)


state 32

    (18) foreign_key_definition -> FOREIGN KEY LPAREN . IDENTIFIER RPAREN reference_definition

    IDENTIFIER      shift and go to state 40


state 33

    (3) table_definition -> CREATE TABLE table_name LPAREN column_definitions RPAREN SEMICOLON .

    CREATE          reduce using rule 3 (table_definition -> CREATE TABLE table_name LPAREN column_definitions RPAREN SEMICOLON .)
    $end            reduce using rule 3 (table_definition -> CREATE TABLE table_name LPAREN column_definitions RPAREN SEMICOLON .)


state 34

    (22) data_type -> type LPAREN . NUMBER RPAREN

    NUMBER          shift and go to state 41


state 35

    (14) column_definition -> IDENTIFIER data_type PRIMARY . KEY

    KEY             shift and go to state 42


state 36

    (16) reference_definition -> REFERENCES . table_name LPAREN column_name_list RPAREN
    (17) reference_definition -> REFERENCES . table_name
    (5) table_name -> . IDENTIFIER
    (6) table_name -> . schema DOT IDENTIFIER
    (7) schema -> . IDENTIFIER

    IDENTIFIER      shift and go to state 9

    table_name                     shift and go to state 43
    schema                         shift and go to state 6

state 37

    (13) column_definition -> IDENTIFIER data_type reference_definition .

    COMMA           reduce using rule 13 (column_definition -> IDENTIFIER data_type reference_definition .)
    RPAREN          reduce using rule 13 (column_definition -> IDENTIFIER data_type reference_definition .)


state 38

    (4) table_definition -> CREATE TABLE IF NOT EXISTS table_name LPAREN . column_definitions RPAREN SEMICOLON
    (8) column_definitions -> . column_definition
    (9) column_definitions -> . primary_key_definition
    (10) column_definitions -> . foreign_key_definition
    (11) column_definitions -> . column_definition COMMA column_definitions
    (12) column_definition -> . IDENTIFIER data_type
    (13) column_definition -> . IDENTIFIER data_type reference_definition
    (14) column_definition -> . IDENTIFIER data_type PRIMARY KEY
    (15) primary_key_definition -> . PRIMARY KEY LPAREN IDENTIFIER RPAREN
    (18) foreign_key_definition -> . FOREIGN KEY LPAREN IDENTIFIER RPAREN reference_definition

    IDENTIFIER      shift and go to state 19
    PRIMARY         shift and go to state 14
    FOREIGN         shift and go to state 16

    column_definition              shift and go to state 15
    foreign_key_definition         shift and go to state 18
    primary_key_definition         shift and go to state 20
    column_definitions             shift and go to state 44

state 39

    (15) primary_key_definition -> PRIMARY KEY LPAREN IDENTIFIER . RPAREN

    RPAREN          shift and go to state 45


state 40

    (18) foreign_key_definition -> FOREIGN KEY LPAREN IDENTIFIER . RPAREN reference_definition

    RPAREN          shift and go to state 46


state 41

    (22) data_type -> type LPAREN NUMBER . RPAREN

    RPAREN          shift and go to state 47


state 42

    (14) column_definition -> IDENTIFIER data_type PRIMARY KEY .

    COMMA           reduce using rule 14 (column_definition -> IDENTIFIER data_type PRIMARY KEY .)
    RPAREN          reduce using rule 14 (column_definition -> IDENTIFIER data_type PRIMARY KEY .)


state 43

    (16) reference_definition -> REFERENCES table_name . LPAREN column_name_list RPAREN
    (17) reference_definition -> REFERENCES table_name .

    LPAREN          shift and go to state 48
    RPAREN          reduce using rule 17 (reference_definition -> REFERENCES table_name .)
    COMMA           reduce using rule 17 (reference_definition -> REFERENCES table_name .)


state 44

    (4) table_definition -> CREATE TABLE IF NOT EXISTS table_name LPAREN column_definitions . RPAREN SEMICOLON

    RPAREN          shift and go to state 49


state 45

    (15) primary_key_definition -> PRIMARY KEY LPAREN IDENTIFIER RPAREN .

    RPAREN          reduce using rule 15 (primary_key_definition -> PRIMARY KEY LPAREN IDENTIFIER RPAREN .)


state 46

    (18) foreign_key_definition -> FOREIGN KEY LPAREN IDENTIFIER RPAREN . reference_definition
    (16) reference_definition -> . REFERENCES table_name LPAREN column_name_list RPAREN
    (17) reference_definition -> . REFERENCES table_name

    REFERENCES      shift and go to state 36

    reference_definition           shift and go to state 50

state 47

    (22) data_type -> type LPAREN NUMBER RPAREN .

    PRIMARY         reduce using rule 22 (data_type -> type LPAREN NUMBER RPAREN .)
    REFERENCES      reduce using rule 22 (data_type -> type LPAREN NUMBER RPAREN .)
    COMMA           reduce using rule 22 (data_type -> type LPAREN NUMBER RPAREN .)
    RPAREN          reduce using rule 22 (data_type -> type LPAREN NUMBER RPAREN .)


state 48

    (16) reference_definition -> REFERENCES table_name LPAREN . column_name_list RPAREN
    (19) column_name_list -> . IDENTIFIER
    (20) column_name_list -> . IDENTIFIER COMMA column_name_list

    IDENTIFIER      shift and go to state 52

    column_name_list               shift and go to state 51

state 49

    (4) table_definition -> CREATE TABLE IF NOT EXISTS table_name LPAREN column_definitions RPAREN . SEMICOLON

    SEMICOLON       shift and go to state 53


state 50

    (18) foreign_key_definition -> FOREIGN KEY LPAREN IDENTIFIER RPAREN reference_definition .

    RPAREN          reduce using rule 18 (foreign_key_definition -> FOREIGN KEY LPAREN IDENTIFIER RPAREN reference_definition .)


state 51

    (16) reference_definition -> REFERENCES table_name LPAREN column_name_list . RPAREN

    RPAREN          shift and go to state 54


state 52

    (19) column_name_list -> IDENTIFIER .
    (20) column_name_list -> IDENTIFIER . COMMA column_name_list

    RPAREN          reduce using rule 19 (column_name_list -> IDENTIFIER .)
    COMMA           shift and go to state 55


state 53

    (4) table_definition -> CREATE TABLE IF NOT EXISTS table_name LPAREN column_definitions RPAREN SEMICOLON .

    CREATE          reduce using rule 4 (table_definition -> CREATE TABLE IF NOT EXISTS table_name LPAREN column_definitions RPAREN SEMICOLON .)
    $end            reduce using rule 4 (table_definition -> CREATE TABLE IF NOT EXISTS table_name LPAREN column_definitions RPAREN SEMICOLON .)


state 54

    (16) reference_definition -> REFERENCES table_name LPAREN column_name_list RPAREN .

    RPAREN          reduce using rule 16 (reference_definition -> REFERENCES table_name LPAREN column_name_list RPAREN .)
    COMMA           reduce using rule 16 (reference_definition -> REFERENCES table_name LPAREN column_name_list RPAREN .)


state 55

    (20) column_name_list -> IDENTIFIER COMMA . column_name_list
    (19) column_name_list -> . IDENTIFIER
    (20) column_name_list -> . IDENTIFIER COMMA column_name_list

    IDENTIFIER      shift and go to state 52

    column_name_list               shift and go to state 56

state 56

    (20) column_name_list -> IDENTIFIER COMMA column_name_list .

    RPAREN          reduce using rule 20 (column_name_list -> IDENTIFIER COMMA column_name_list .)

